# picobrew-server

./: .gitignore  .gitmodules  .pylintrc  LICENSE  MANIFEST.in  Procfile  README.md  gunicorn.conf.py  lint.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.py
.github/workflows/: publish_pypi.yml  test_lint.yaml
beerxml/: __init__.py  fermentable.py  hop.py  mash.py  mash_step.py  parser.py  picobrew_parser.py  picobrew_program_step.py  picobrew_recipe.py  recipe.py  style.py  yeast.py
blueprints/: errors.py  frontend.py  picobrew_API.py  picobrew_api.py
docs/: FAQ.md  Install.md  PicoBrew-API.md
picobrew_server/: __init__.py
picobrew_server/beerxml/: picobrew_parser.py  picobrew_program_step.py  picobrew_recipe.py
picobrew_server/blueprints/: errors.py  frontend.py  picobrew_api.py
picobrew_server/recipes/: Always_Ale.xml  Party_Porter.xml
picobrew_server/templates/: 404.html  500.html  base.html  index.html  navbar.html  recipes.html  upload.html  validate.html
picobrew_server/utils/: constants.py
src/: picobrew_gui.py
static/css/: main.css
static/img/: LICENSE.txt
templates/: base.html  index.html  navbar.html  recipes.html  upload.html  validate.html
tests/beerxml/: test_picobrew_parser.py  test_picobrew_program_step.py  test_picobrew_recipe.py
utils/: constants.py
