[tool.poetry]
name = "picobrew_server"
version = "1.0.1"
description = "A reverse-engineered server for the Picobrew homebrewing machines"
authors = ["Tom Herold <heroldtom@gmail.com>"]
repository = "https://github.com/hotzenklotz/picobrew-server"
keywords = ["picobrew", "zymatic", "homebrewing", "beerxml"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
Flask-Cors = "3.0.8"
webargs = "6.0.0"
Werkzeug = "1.0.1"
pybeerxml = "^1.0.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
