[project]
name = "picobrew_server"
version = "1.0.1"
description = "A reverse-engineered server for the Picobrew homebrewing machines"
authors = [
    {name = "Tom Herold", email = "heroldtom@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["picobrew", "zymatic", "homebrewing", "beerxml"]
dependencies = [
    "Flask>=1.1.2",
    "Flask-Cors>=3.0.10",
    "webargs>=6.0.0",
    "pybeerxml>=1.2.0",
]

[project.urls]
Repository = "https://github.com/hotzenklotz/picobrew-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]
# https://docs.astral.sh/ty
